--- a/indexar.html
+++ b/indexar.html
@@ -37,6 +37,7 @@
         <img id="displaces8k" src="./scenes/panostudio-backyard-8k-displace.webp">
         <img id="normals8k" src="./scenes/panostudio-backyard-8k-normal.webp">
         <img id="ambientos8k" src="./scenes/panostudio-backyard-8k-ambiento.webp">
+        <a-asset-item id="character1" src="./models/characters/"></a-asset-item>
     </a-assets>
     <!-- Creating sky sphere radius, height, width, and load source material-->
     <a-sky color="#eaeaea" src="#psby8k" radius="48" segments-height="256" segments-width="256"
@@ -55,6 +56,8 @@
         castShadow: true; angle: 120" 
         position="2 -43 6.5"></a-entity>
     </a-sky>
+    <!--Add Models as GLTF standard 2.0-->
+    <a-gltf-model src="#character1"></a-gltf-model>
     <!--Add Oculus controls in VR Mode-->
         <a-entity super-hands oculus-touch-controls="hand:left; model:true">
             <!--<a-entity super-hands tracked-controls="controller: 0; idPrefix: VRLeft"></a-entity>-->
@@ -62,8 +65,7 @@
         <a-entity super-hands oculus-touch-controls="hand:right; model:true">
             <!--<a-entity super-hands tracked-controls="controller: 1; idPrefix: VRRight"></a-entity>-->
         </a-entity>
-        <a-box height="0.5" width="0.5" depth="0.5" sphere-collider grabbable draggable 
-        color="blue" position="0 0 -0.4"></a-box>
+        
     </a-scene>
 </body>
 
